:sparkles: Make change line works

--- a/packages/web/src/pages/globals.css
+++ b/packages/web/src/pages/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+[contenteditable][data-placeholder]:empty:before {
+  content: attr(data-placeholder);
+  color: #aaa; /* Placeholder text color */
+  cursor: text;
+  pointer-events: none;
+}
