:sparkles: Change build command

--- a/packages/web/public/styles.css
+++ b/packages/web/public/styles.css
@@ -665,6 +665,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -795,6 +800,10 @@ video {
 
 .h-max {
   height: max-content;
+}
+
+.h-px {
+  height: 1px;
 }
 
 .h-screen {
@@ -1011,6 +1020,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-0 {
+  border-width: 0px;
 }
 
 .border-2 {
@@ -1719,5 +1732,12 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:bg-gray-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
 }
